--- a/classes/princeton/index.html
+++ b/classes/princeton/index.html
@@ -17,7 +17,7 @@
   <header class="header-classes">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
@@ -28,81 +28,43 @@
   </header>
 
   <div class="header-background">
-    <h1>London, England</h1>
+    <h1>Princeton, New Jersey</h1>
   </div>
 
   <section class="history-classes">
+   
+   
     <div class="history-container classes-container">
     <div class="history-container classes-container instructor-container">
-      <a href="#gordonjoly-popup" class="animated_popup"><h1>Instructor: Gordon Joly</h1></a>
-        <div id="gordonjoly-popup" class="image-popup" style="display:none">
-          <h3>Gordon Joly</h3>
-          <img src="../../assets/images/instructor/gordonjoly.jpg">
-          <p>Gordon Joly began his tai chi journey in 1990 and has been teaching since 1997. Since then he has taught at the BBC Club (at BBC Television Centre) and Madame Tussauds in London (UK) and at many classes around London. He has held weekend workshops in the UK and Canada. His interest in tai chi started from a training in dance and some exploration of yoga. He likes the special type of meditation brought through practice of the tai chi Slow Set.</p>
-
-          <p>Gordon first met Master Alex Dong in the early 1990s and has followed the family style ever since. He sees the art as being accessible to all, and hence this allows both the energetic youngster, and the more careful older student to follow and gain benefit. He is interested in writing about tai chi, from all perspectives; he sees a relationship between some parts of mathematics and tai chi as well as between music and tai chi.</p>
-        </div>
-      <p>Class schedule - <a href="http://www.taichispirit.org.uk/" target="_blank">Tai Chi Spirit</a></p>
-    </div>
-
-    <div class="history-container classes-container instructor-container">
-      <a href="#arthurmartin-popup" class="animated_popup"><h1>Instructor: Arthur Martin</h1></a>
-      <div id="arthurmartin-popup" class="image-popup" style="display:none">
-        <h3>Arthur Martin</h3>
-        <img src="http://www.taichispirit.org.uk/images/arthur.jpg">
-        <p>I started studying tai chi in 1991 with the student, of the student of
-        my teacher's father: Dong Zhen Chen. I became a more serious student
-        in 1998 after I joined Master Alex's father's trip to China: The skill
-        and accuracy of their students from other countries blew me away and
-        gave me a goal.</p>
-
-        <p>From 1998 I tried a lot harder and attended many of Master Alex Dong's
-        workshops around the world. My teaching philosophy is to try and
-        plagiarize as much as I can from Master Alex's classes. Part of the
-        fun of being taught by Master Alex is, that feeling you get when he
-        suddenly makes simple, things that were making your head hurt trying
-        to understand.</p>
-
-        <p>I like tai chi because it's mentally and physically stimulating, and
-        makes you feel great. I live in Essex.</p>
-      </div>
-      <p>Thursday Beginners 11:00 to 12:20
-      <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?NW1+7JY" target="_blank">Soho Gyms, 193, Camden High Street, London NW1 7JY.</a> Phone: 020 7482 4524. Cost £10.00</p>
-      <p>Thursday Beginners 18:40 to 20:10
-      <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?EC1R+1XX" target="_blank">Venue: St Mark's Church, Myddelton Square, EC1R 1XX</a> (Tube: Angel) Cost £7.00.</p>
-      <p>Thursday Hao style and push hands, 20:10 to 20:40
-      <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?EC1R+1XX" target="_blank">Venue: St Mark's Church, Myddelton Square, EC1R 1XX</a> (Tube: Angel)  Open to students who know the Slow Set (free) </p>
-      <p>Phone: 07952 593337</p>
-    </div>
-
-    <div class="history-container classes-container instructor-container">
-      <a href="#joycejoly-popup" class="animated_popup"><h1>Instructor: Joyce Joly</h1></a>
-      <div id="joycejoly-popup" class="image-popup" style="display:none">
-        <h3>Joyce Joly</h3>
-        <img src="http://www.taichispirit.org.uk/images/jij.jpg">
-      <p>Joyce Joly has been practicing tai chi for over 25 years, and has been teaching for 15 years.</p>
-      <p>All of her learning has been with the Dong Family. Firstly with Dong Zeng Chen and now with Alex Dong. Joyce has attended many classes in the UK and abroad taking advantage of the teaching to improve her tai chi.</p>
-      <p>Joyce has a particular interest in teaching older people and intends to start teaching elderly people in residential homes, giving tai chi based exercises.</p>
-      </div>
-       <p>Class schedule - <a href="http://www.taichispirit.org.uk/" target="_blank">Tai Chi Spirit</a></p>
-    </div>
-    <div class="history-container classes-container">
-    <div class="history-container classes-container instructor-container">
-      <a href="#davidfricker-popup" class="animated_popup"><h1>Instructor: David Fricker</h1></a>
-        <div id="davidfricker-popup" class="image-popup" style="display:none">
-          <h3>David Fricker</h3>
-           <p>I started martial arts in 1990 in a school named Ying Wu Kwan Kung Fu, where I achieved 3 grades and I also did judo as a child.</p>
-            <p>When I moved from one address to another in Dagenham I changed doctors that was where I met Phillip Shields.
-               I had one lesson of tai chi and felt fantastic and followed Phillip to all his other classes for seven years mainly learning slow set and push hands. Phillip was a great teacher of tai chi and when I met Alex Dong for the first time I could see where his teaching method had come from.
-            <p>I attended classes with Alex in the UK, and the energy and well being was great. I wouldn't say its a cure but it does help dilute physical and mental problems.
-            <p>I like tai chi because it is beneficial to my health and it makes me feel good as long as I keep training. </p>
-        </div>
-      <p>Fanshawe Community Hall</br>
-        Barnmead Road</br>
-        Dagenham RM9 5DX</br>
-        12:30pm - 1:30pm Tuesdays</br>
-        Please make a donation to pay for the hall</br>
-        Email: <a href="mailto:taichichaun@gmail.com">taichichaun@gmail.com</a>
+      <a href="#todd-popup" class="animated_popup"><h1>Instructor: Todd Tieger</h1></a>
+        <div id="todd-popup" class="image-popup" style="display:none">
+          <h3>Todd Tieger</h3>
+           
+          <p>I live in Princeton New Jersey and have been teaching Dong style Taijiquan for eight years.  I originally studied Dong Family Taiji with Wu-Tah Yeh and Wu Teng Shu-Hsien in Palo Alto California in 1975 when I was a graduate student at Stanford.  The Wu’s learned Taiji from Tung Hu-Ling in Southeast Asia.
+          </p>
+          <p>After finishing my doctoral studies, I relocated to New Jersey where I began a career in software engineering.  For many years I practiced my Taiji alone, since no local teacher of the Dong style was available.  However, in 2007, I discovered that Master Alex Dong - grandson of Tung Hu-Ling - was living and teaching in New York City.  By attending classes and workshops with Master Alex in New York and around the world, my enthusiasm for Taiji grew to a new level and I resolved to study the traditions in greater depth.
+          </p>
+ 
+          <p>In 2008, I began teaching Taiji in Princeton and then Plainsboro New Jersey and built a large community of practitioners dedicated to the study of the classical Yang long form, sabre and Fajin set as taught by Master Alex.
+          </p>
+ 
+          <p>As a student of Master Alex Dong, I benefit from the best possible instruction from a family that is central to the historical lineage of Taijiquan itself.  I am very grateful not only for his expert teaching but also his humble insights on human nature and how to teach.  I also greatly enjoy the company of Master Alex’s students from around the world.  At workshops we work hard and have fun too!
+          </p>
+          <p>As a teacher, I owe a great debt to my students, who teach me the virtue of patience and who provide an important focus in my life that benefits my health and outlook on life in every way possible.
+          </p></div>
+      <dl>
+        <dt>Classes</dt>
+        <dd>Saturdays 10 AM - beginning students</dd>
+        <dd>Saturdays 11 AM - intermediate students</dd>
+        <dd>Wednesdays 5:15 PM – advanced students - energy development and </dd>
+        <dd>dynamics in the long form, Sabre, Fajin set and push hands</dd>
+        <dt>Location</dt>
+        <dd>Plainsboro Public Library Community Room, Plainsboro, New Jersey</dd>
+      </dl>
+      <p>New students are always welcome – please contact me as noted below.</p>
+      <p>Contact:  Todd Tieger
+        Phone: 609-439-8656 or Email: <a href="mailto:todd.tieger@gmail.com">todd.tieger@gmail.com</a>
+     
       </p>
     </div>
 
