--- a/classes/princeton/index.html
+++ b/classes/princeton/index.html
@@ -52,15 +52,14 @@
           </p>
           <p>As a teacher, I owe a great debt to my students, who teach me the virtue of patience and who provide an important focus in my life that benefits my health and outlook on life in every way possible.
           </p></div>
-      <dl>
-        <dt>Classes</dt>
-        <dd>Saturdays 10 AM - beginning students</dd>
-        <dd>Saturdays 11 AM - intermediate students</dd>
-        <dd>Wednesdays 5:15 PM – advanced students - energy development and </dd>
-        <dd>dynamics in the long form, Sabre, Fajin set and push hands</dd>
-        <dt>Location</dt>
-        <dd>Plainsboro Public Library Community Room, Plainsboro, New Jersey</dd>
-      </dl>
+      <p>Classes:</br>
+        Saturdays 10 AM - beginning students</br>
+        Saturdays 11 AM - intermediate students</br>
+        Wednesdays 5:15 PM – advanced students - energy development and </br>
+        dynamics in the long form, Sabre, Fajin set and push hands</p>
+        <p>Location:</br>
+        <Plainsboro Public Library Community Room, Plainsboro, New Jersey</p>
+      
       <p>New students are always welcome – please contact me as noted below.</p>
       <p>Contact:  Todd Tieger
         Phone: 609-439-8656 or Email: <a href="mailto:todd.tieger@gmail.com">todd.tieger@gmail.com</a>
@@ -73,7 +72,7 @@
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
