--- a/classes/princeton/index.html
+++ b/classes/princeton/index.html
@@ -55,10 +55,10 @@
       <p>Classes:</br>
         Saturdays 10 AM - beginning students</br>
         Saturdays 11 AM - intermediate students</br>
-        Wednesdays 5:15 PM – advanced students - energy development and </br>
-        dynamics in the long form, Sabre, Fajin set and push hands</p>
+        Wednesdays 5:15 PM – advanced students - energy development</br>
+        and dynamics in the long form, Sabre, Fajin set and push hands</p>
         <p>Location:</br>
-        <Plainsboro Public Library Community Room, Plainsboro, New Jersey</p>
+        Plainsboro Public Library Community Room, Plainsboro, New Jersey</p>
       
       <p>New students are always welcome – please contact me as noted below.</p>
       <p>Contact:  Todd Tieger
