--- a/classes/belohorizonte/index.html
+++ b/classes/belohorizonte/index.html
@@ -16,7 +16,7 @@
   <header class="header-classes">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
@@ -32,7 +32,7 @@
 
   <section class="history-classes">
     <div class="history-container classes-container">
-      <h1>Instructor: Luciana Maia and Mateus Prates Pereira</h1></a>
+      <h1>Instructor: Luciana Maia and Mateus Prates Pereira</h1>
       <p><a href="http://www.taichichuanbhmg.com.br/">Tai Chi Chaun BH/MG</a></p>
     </div>
 
@@ -59,7 +59,7 @@
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
