--- a/classes/index.html
+++ b/classes/index.html
@@ -15,7 +15,7 @@
   <header class="header-classes">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../classes/">Classes</a></li>
         <li><a href="../legacy/">Legacy</a></li>
@@ -32,7 +32,7 @@
   
 
   <section class="history lineage">
-    <div class="history-container"
+    <div class="history-container">
   <p>Master Alex Dong teaches classes in New York City. Registered instructors in the 
     Association teach at centers around the world.</p>
     </div>
@@ -55,6 +55,7 @@
         <li><a href="lakechelan/">Lake Chelan, Washington</a></li>
         <li><a href="olympia/">Olympia, Washington</a></li>
         <li><a href="thurstoncounty/">Thurston County, Washington</a></li>
+        <li><a href="princeton/">Princeton, New Jersey</a></li>
       </ul>
       <h2>Canada</h2>
       <ul class="classes-ul">
@@ -82,7 +83,7 @@
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../classes/">Classes</a></li>
         <li><a href="../legacy/">Legacy</a></li>
