--- a/classes/princeton/index.html
+++ b/classes/princeton/index.html
@@ -39,19 +39,20 @@
       <a href="#todd-popup" class="animated_popup"><h1>Instructor: Todd Tieger</h1></a>
         <div id="todd-popup" class="image-popup" style="display:none">
           <h3>Todd Tieger</h3>
-           
-          <p>I live in Princeton New Jersey and have been teaching Dong style Taijiquan for eight years.  I originally studied Dong Family Taiji with Wu-Tah Yeh and Wu Teng Shu-Hsien in Palo Alto California in 1975 when I was a graduate student at Stanford.  The Wu’s learned Taiji from Tung Hu-Ling in Southeast Asia.
+           <p>I began my study of Taijiquan with Wu-Tah Yeh and Wu Teng Shu-Hsien when I was a graduate student at Stanford in Palo Alto California in 1975.  The Wu’s learned and taught the Dong (Tung) family style from Alex Dong's grandfather, Tung Hu-Ling.
           </p>
-          <p>After finishing my doctoral studies, I relocated to New Jersey where I began a career in software engineering.  For many years I practiced my Taiji alone, since no local teacher of the Dong style was available.  However, in 2007, I discovered that Master Alex Dong - grandson of Tung Hu-Ling - was living and teaching in New York City.  By attending classes and workshops with Master Alex in New York and around the world, my enthusiasm for Taiji grew to a new level and I resolved to study the traditions in greater depth.
+          <p>After finishing my doctoral studies, I relocated to New Jersey where I began a career in software engineering.  For many years I practiced my Taiji alone, since no local teacher of the Dong style was available.  However, in 2007, I discovered to my delight that Master Alex Dong was living and teaching in New York City.  By attending classes and workshops with Master Alex there and around the world, my enthusiasm for Taiji grew and I resolved to study the traditions in greater depth.
           </p>
- 
-          <p>In 2008, I began teaching Taiji in Princeton and then Plainsboro New Jersey and built a large community of practitioners dedicated to the study of the classical Yang long form, sabre and Fajin set as taught by Master Alex.
+          <p>In 2008, I began teaching Taiji and building a community of practitioners in the Princeton/Plainsboro area dedicated to the study of the classical Yang long form, saber, the Fa-jin set, and push hands as taught by Master Alex.
           </p>
- 
-          <p>As a student of Master Alex Dong, I benefit from the best possible instruction from a family that is central to the historical lineage of Taijiquan itself.  I am very grateful not only for his expert teaching but also his humble insights on human nature and how to teach.  I also greatly enjoy the company of Master Alex’s students from around the world.  At workshops we work hard and have fun too!
+          <p>As a student of Master Alex Dong, I have benefited greatly from his expert teaching and the wonderful opportunity to observe first-hand the beauty and power of Taijiquan taught in the context of a family tradition that is central to the historical lineage of Taijiquan itself.  
           </p>
-          <p>As a teacher, I owe a great debt to my students, who teach me the virtue of patience and who provide an important focus in my life that benefits my health and outlook on life in every way possible.
-          </p></div>
+          <p>It has been said that you can know the character of a man by the company he keeps.  And so it is with Master Alex - it is a great experience for me to get to know and work with Master Alex’s students from around the world, with whom I share a passion for the practice and teaching of Taijiquan.  At Master Alex's classes and workshops, we work hard and also have a lot of fun together!
+          </p>
+          <p>As a teacher, I owe a great debt to my students, who have taught me the virtue of patience, and who provide an important motivation for me to study and learn more about Taijiquan, thus benefiting my health and outlook on life in every way possible.
+          </p>
+
+          </div>
       <p>Classes:</br>
         Saturdays 10 AM - beginning students</br>
         Saturdays 11 AM - intermediate students</br>
