--- a/classes/grenoble/index.html
+++ b/classes/grenoble/index.html
@@ -16,7 +16,7 @@
   <header class="header-classes">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
@@ -40,7 +40,7 @@
 
           <p>A couple of years later I had the great experience of taking a 10-week trip to southern China alone. This adventure served as a transition before returning to France. In 1988 I joined a Tai Chi class in Lyon taught by Jean-Claude Sapin, a French philosopher who studied in Taiwan, and later on found a class in Grenoble practicing the Yang form from the Tung family. In 1990 my friends from Chicago visited Grenoble and taught us a fan form from Taiwan. Until 1992, birth of my son Camille, I was able to study in Paris with Anya Meot and to attend Tung Kai Ying's workshops. 1996 was an important event, as I managed to visit Burma after several unsuccessful attempts. I had the chance to meet Mr Chan, a senior Tai Chi and Qi Gong master, and to hear the Nobel laureate Aug San Suu Kyi speak about nonviolence and democracy. Back to the US (Berkeley, CA) in 1997 for a sabbatical year, I had the opportunity to study the sword form with Marybeth Rice, a former student of Wu Tai-Yeh.</p>
 
-          <p>2000 was the year of my first workshop with Alex Dong in Athens, found by typing the keywords "tai" & "chi" on the Internet. Alex's personality and teaching skills attracted me immediately. Since then, whenever possible, I follow his teaching through his workshops organized in Greece, UK, and the US. The rest of the time I attend a regular tai-chi class in the Grenoble area, taught by Daniel Carriau, a long-term student of Tung Kai Ying. In 2008 Alex Dong encouraged my plan to begin teaching. So I started a beginner's class in my village and another one in Grenoble. The latter class is for elderly people. My oldest students, 94 and 90 years old, are examples for everyone. The art of repeating and of adapting are helping me develop patience. I find teaching an exciting experience and a true opportunity to improve my own practice. At times, students are sharing their experience and the effect of Tai Chi on their daily life. These moments are particularly rewarding. Besides Tai Chi, I have been practicing Hatha Yoga for 12 years and Vipassana meditation, Burmese style, for 5 years. The regular practice of these various ancient arts helps me find balance in our "modern" life.</p>
+          <p>2000 was the year of my first workshop with Alex Dong in Athens, found by typing the keywords "tai" &amp; "chi" on the Internet. Alex's personality and teaching skills attracted me immediately. Since then, whenever possible, I follow his teaching through his workshops organized in Greece, UK, and the US. The rest of the time I attend a regular tai-chi class in the Grenoble area, taught by Daniel Carriau, a long-term student of Tung Kai Ying. In 2008 Alex Dong encouraged my plan to begin teaching. So I started a beginner's class in my village and another one in Grenoble. The latter class is for elderly people. My oldest students, 94 and 90 years old, are examples for everyone. The art of repeating and of adapting are helping me develop patience. I find teaching an exciting experience and a true opportunity to improve my own practice. At times, students are sharing their experience and the effect of Tai Chi on their daily life. These moments are particularly rewarding. Besides Tai Chi, I have been practicing Hatha Yoga for 12 years and Vipassana meditation, Burmese style, for 5 years. The regular practice of these various ancient arts helps me find balance in our "modern" life.</p>
         </div>
       <p>Association Emouvement
       <br>Monday: 17:15- 19:00, ESRF, 71 avenue des martyrs, 38000 Grenoble; 
@@ -54,7 +54,7 @@
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
