--- a/workshops/index.html
+++ b/workshops/index.html
@@ -46,7 +46,7 @@
        <p>Details</p>
        <p>Friday, October 21, 2016
 		7:00-9:00 pm – Bouctouche, NB</p>
-	<p>Saturday and Sunday, October 22 & 23,
+	<p>Saturday and Sunday, October 22 &amp; 23,
 		9:30 am to 12:00 pm and 1:30 to 4:00 pm
 		École Saint Henri (School)
 		101 Gross Ave, Moncton, NB</p>
@@ -92,7 +92,7 @@
 		<dd>Sunday 4th 10.30-13.00 Slow Set</dd>
 		<dd>15.00-17.30 Sword Set </dd>
 		<dt>Cost</dt>
-		<dd>225&euro; euro for the whole workshop or 35&euro; per lesson</dd></a>
+		<dd>225&euro; euro for the whole workshop or 35&euro; per lesson</dd>
 		<dt>Venue</dt>
 		<dd>Will be held at venues in Athens which will be announced later</dd>
 		</dl>
