--- a/classes/newyorkcity/index.html
+++ b/classes/newyorkcity/index.html
@@ -16,7 +16,7 @@
   <header class="header-classes">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
@@ -41,8 +41,9 @@
       <p>New class starting 8th September 2016. 
       Full details <a target="_blank" href="http://alexdongtaichi.com/assets/docs/alex_sep_2016.jpg">here</a> </p>
       <h2>Monthly workshop</h2>
-      <p>There’s a Sunday workshop once a month for students with experience. Please inquire for dates and location. Private lessons are also available by Master Alex Dong and senior students.</p>
-      <a href="https://www.google.com/maps/place/440+Studios/@40.729541,-73.992244,15z/data=!4m2!3m1!1s0x0:0x38d9b08a7982056e" target="_blank"><p>440 Studios<br>440 Lafayette Street, New York NY 10003.</a><br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th Street on the W, R trains, and Astor Place on the 6 trains.</p>
+      <p>There’s a Sunday workshop once a month for students with experience. Please inquire for dates and location. Private lessons are also available by Master Alex Dong and senior students.<br/>
+      <a href="https://www.google.com/maps/place/440+Studios/@40.729541,-73.992244,15z/data=!4m2!3m1!1s0x0:0x38d9b08a7982056e" target="_blank"><p>440 Studios<br>440 Lafayette Street, New York NY 10003.</a>
+      <br/>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th Street on the W, R trains, and Astor Place on the 6 trains.</p>
       <h3>For more information, please email <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></h3>
     </div>
   </section>
@@ -52,7 +53,7 @@
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
