--- a/classes/belohorizonte/index.html
+++ b/classes/belohorizonte/index.html
@@ -37,22 +37,24 @@
     </div>
 
     <div class="history-container classes-container instructor-container">
-      <a href="#tonidemoulin-popup" class="animated_popup"><h1>Instructor: Sandra Arruda</h1></a>
-        <div id="tonidemoulin-popup" class="image-popup" style="display:none">
+      <a href="#sandra-popup" class="animated_popup"><h1>Instructor: Sandra Arruda</h1></a>
+        <div id="sandra-popup" class="image-popup" style="display:none">
           <img src="../../assets/images/instructor/sandraarruda.jpg">
           <h3>Sandra Arruda</h3>
           <p>Sandra has practiced Tai Chi Chuan Yang Style since 2005 and in 2008 she had the opportunity of attend Master Alex Dong Workshop in Belo Horizonte, Brazil. In that occasion, the talent, power and softness of Master Alex, also his open and clear teachings, impressed her. Since then, Sandra has followed Master Alex in workshops in Brazil and USA.</p>
 
           <p>Dong Style has changed totally her perspective about Tai Chi Chuan and her goals to improve herself, getting deep into her practice and share her learning. In 2010, she started teaching: an honor and an opportunity to contribute in the spread and growth of this art.</p>
         </div>
-      <p>Location: - Rua Congonhas, 700 sala 101 Bairro Santo Antonio BH
-      <br>Location: Grupo Ramal, Praca Ramatis, 161 - Parque Riachuelo BH
-      <br>Classes: Mondays and Wednesdays from 20:30 to 21:30
-      <br>Location: Al. Serra da Mantiqueira, 1398 Vila del Rey Nova Lima
-      <br>Classes: Tuesdays and Fridays from 19:00 to 20:00</p>
+      
+      <p>Location: Alto da Avenida Afonso Pena<br/>
+        Classes: Wednesdays from 18:00 to 19:30<br/>
+        Location: Al. Serra da Mantiqueira, 1398 Vila del Rey Nova Lima<br/>
+        Classes: Tuesdays from 19:15 to 20:45</p>
 
-      <p>Contact: <a href="mailto:contato@sandrarruda.fot.br">contato@sandrarruda.fot.br</a>
-      <br>Website: <a href="http://projetosentidos.wordpress.com" target="_blank">projetosentidos.wordpress.com</a></p>
+
+
+      <p>Contact: <a href="mailto: info@taichisentidos.com"> info@taichisentidos.com</a></p>
+      <p>Website: <a href="http://www.taichisentidos.com" target="_blank">Tai Chi Sentidos</a></p>
     </div>
   </section>
 
