--- a/workshops/index.html
+++ b/workshops/index.html
@@ -78,7 +78,10 @@
 		<dt>Cost</dt>
 		<dd>225&euro; euro for the whole workshop or 35&euro; per lesson</dd>
 		<dt>Venue</dt>
-		<dd>Will be held at venues in Athens which will be announced later</dd>
+		<dd>Thursday 1/12 : Nik. Plastira 62, Nea Smirni.</dd>
+		<dd>Friday 2/12-Sunday 4/12 : Ipponaktos36, Neos Kosmos.</dd>
+		<dd>Celebration night on Saturday 3/12 20:30-23:00 at Plastira 62, Nea Smirni.</dd>
+
 		</dl>
         <p>For more information contact Lydia at <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a>
 		or Yiannis at <a href="mailto:taichiathens@gmail.com">taichiathens@gmail.com</a>
