--- a/workshops/index.html
+++ b/workshops/index.html
@@ -46,7 +46,7 @@
         <dl>
         	<dt>Programme</dt> 
 		<dd>Thursday 1st 19.00-21.30 Push Hands</dd>
-		<dd>Friday 2nd 10.30-13.00 Advanced Knife ( possible lesson)</dd>
+		<dd>Friday 2nd 10.30-13.00 Advanced Knife (confirmed)</dd>
 		<dd>19.00-21.30 Family Set</dd>
 		<dd>Saturday 3rd 10.30-13.00 Slow Set </dd>
 		<dd>15.00-17.30 Hao Set</dd>
