--- a/workshops/index.html
+++ b/workshops/index.html
@@ -67,7 +67,8 @@
 		    <p>Forms, qigong and practice push hands training.</p>
 		    <p>There will be four two and a half hours push hands class starting Friday May 5th in the afternoon.</p>
 		    <p>Participants must attend the entire workshop.</p> 
-	       
+	       <p>To register for this event, please download a registration form as a PDF or Word<a href="../assets/docs/WW2017.docx">Word document</a>
+		       or a <a href="../assets/docs/WW2017.pdf">PDF</a> and send to Alex Dong.</p>
 	       
         <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
