--- a/classes/newyorkcity/index.html
+++ b/classes/newyorkcity/index.html
@@ -41,8 +41,8 @@
       A discounted price of $100 per cycle for both classes.</p>
       
       
-      <h2>Thursday evenings - Room 3A/4F</h2>
-      <p>6pm to 7pm - Qigong - Room 3A (new students and drop-ins are welcome anytime). <br/>
+      <h2>Thursday evenings - Room 3G/4F</h2>
+      <p>6pm to 7pm - Qigong - Room 3G (new students and drop-ins are welcome anytime). <br/>
         First class starting on January 19th, 2017. $70 per cycle of 4 or $20 per class.</p>
       <p>7pm to 8:30pm - Tai Chi form - Room 4F.<br/>
         Beginners group starting on January 19th 2017. <br/> 
