--- a/workshops/index.html
+++ b/workshops/index.html
@@ -84,7 +84,10 @@
         <p>August 31st to September 5th 2017</p>
 	<p>Push Hands and Forms training in Southern Ardèche of France</p>
 	<p><a href="http://www.domainedutaille.com/" target="_blank">Domaine du Taillé en Ardèche</a>
-	<p>More details soon. </p>
+	<p>Further information in 
+		<a href="../assets/docs/France_2017_FR.docx">French</a> or 
+		<a href="../assets/docs/France_2017_EN.docx">English</a></p>
+		    <p>See also <a href="../assets/docs/Europe2017.docx">Europe 2017 details</a></p>
 	</div>
 
 	<a href="#croatia2017" class="animated_popup"><h1>Croatia</h1></a>
@@ -92,7 +95,7 @@
             		<div id="croatia2017" style="display:none" class="image-popup" class="book-details-popup">
        		 <h3>Croatia</h3>
        		 <p>September 8th to September 10th 2017</p>
-				<p>Details to follow</p>
+				<p> <a href="../assets/docs/Europe2017.docx">Europe 2017 details</a></p>
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
 
