--- a/workshops/index.html
+++ b/workshops/index.html
@@ -95,6 +95,11 @@
             		<div id="croatia2017" style="display:none" class="image-popup" class="book-details-popup">
        		 <h3>Croatia</h3>
        		 <p>September 8th to September 10th 2017</p>
+				<p>There will be two  class per day (two hours and a half hours each).
+				Slow form, Fast form, Hao, Saber and Qigong. There will be a 
+					long break in between classes for lunch, nap or swim.
+					End of workshop at 4:30 pm on September 10th.</p>
+					
 				<p> <a href="../assets/docs/Europe2017.docx">Europe 2017 details</a></p>
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
