--- a/store/index.html
+++ b/store/index.html
@@ -34,53 +34,19 @@
   <section class="history-classes store-section books-section">
 
     <div class="store-book-container">
-      <h3><span class="red-highlight">NEW!</span> Taichi Fundamentals Qigong</h3>
+      <h3><span class="red-highlight">NEW!</span>Red Book (English) Revised</h3>
       <h4>$45.00</h4>
-      <a href="#taichiqigong-popup" class="animated_popup"><img src="../assets/images/qigong.jpg"></a>
-      <h5><a href="#taichiqigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
-      <div id="taichiqigong-popup" style="display:none">
-        <h3>Taichi Fundamentals Qigong</h3>
-        <p>Exercises 1 and 2</p>
-
-        <p>Front and back views with instructions</p>
-
-        <p>Taiji Fundamentals Qigong is like a treasure chest. It has many of the key Taiji principles packed into a few simple moves. So it's easy to learn, but highly effective.</p>
-
-        <p>Exercise #1 focuses on opening and developing an eight dimensional perimeter. Loosen the shoulders and upper back; open from the inside and finishes on the outside. </p>
-
-        <p>Exercise #2 focuses on holding and moving the ball. The moves more and deeper when you imagine it moving with a ball embraced in the arms. Learn when does body separates and when does it move in one unit. </p>
-        
-        <p>Extremely good the back. Relieve and heals back pain and shoulder stiffness. </p>
+      <a href="#redbookenglish-popup" class="animated_popup"><img src="../assets/images/englishbook.png"></a>
+      <h5><a href="#redbookenglish-popup" class="animated_popup book-details-link">Book Details</a></h5>
+      <div id="redbookenglish-popup" style="display:none">
+        <h3>Red Book (English) Revised</h3>
+        <p>With 256 photos of Dong YingJie And 66 photos of Dong Huling</p>
+        <p><img src="../assets/images/englishbook1.jpg"></a></p>
+        <p><img src="../assets/images/englishbook2.jpg"></a></p>
       </div>
       <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
       <input type="hidden" name="cmd" value="_s-xclick">
-      <input type="hidden" name="hosted_button_id" value="7BL58W4SJPNK4">
-      <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
-      </form></h6>
-    </div>
-
-    <div class="store-book-container">
-      <h3><span class="red-highlight">NEW!</span> Taichi Fundamentals Qigong (3 Copies)</h3>
-      <h4>$110.00 ($25 Off!)</h4>
-      <a href="#taichiqigong-popup" class="animated_popup"><img src="../assets/images/qigong.jpg"></a>
-      <h5><a href="#taichiqigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
-      <div id="taichiqigong-popup" style="display:none">
-        <h3>Taichi Fundamentals Qigong</h3>
-        <p>Exercises 1 and 2</p>
-
-        <p>Front and back views with instructions</p>
-
-        <p>Taiji Fundamentals Qigong is like a treasure chest. It has many of the key Taiji principles packed into a few simple moves. So it's easy to learn, but highly effective.</p>
-
-        <p>Exercise #1 focuses on opening and developing an eight dimensional perimeter. Loosen the shoulders and upper back; open from the inside and finishes on the outside. </p>
-
-        <p>Exercise #2 focuses on holding and moving the ball. The moves more and deeper when you imagine it moving with a ball embraced in the arms. Learn when does body separates and when does it move in one unit. </p>
-        
-        <p>Extremely good the back. Relieve and heals back pain and shoulder stiffness. </p>
-      </div>
-      <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-      <input type="hidden" name="cmd" value="_s-xclick">
-      <input type="hidden" name="hosted_button_id" value="35GXGPDK27LLQ">
+      <input type="hidden" name="hosted_button_id" value="ZWQMY8XJ55DZQ">
       <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
       </form></h6>
     </div>
@@ -145,22 +111,21 @@
       </div>
 
       <div class="store-book-container">
-        <h3>Red Book (English)</h3>
-        <h4>$35.00</h4>
-        <a href="#redbookenglish-popup" class="animated_popup"><img src="../assets/images/redbook.png"></a>
+        <h3><span class="red-highlight">NEW!</span>Red Book (English) Revised</h3>
+        <h4>$45.00</h4>
+        <a href="#redbookenglish-popup" class="animated_popup"><img src="../assets/images/englishbook.png"></a>
         <h5><a href="#redbookenglish-popup" class="animated_popup book-details-link">Book Details</a></h5>
         <div id="redbookenglish-popup" style="display:none">
-          <h3>Red Book (English)</h3>
-          <p>A translation into English of Tung Ying Jie's famous Red Book book has been completed by Master Alex Dong. The parts of the original that describe the postures are not included in the translation.</p>
+          <h3>Red Book (English) Revised</h3>
+          <p>With 256 photos of Dong YingJie And 66 photos of Dong Huling</p>
+          <p><img src="../assets/images/englishbook1.jpg"></a></p>
+          <p><img src="../assets/images/englishbook2.jpg"></a></p>
         </div>
-        <h6>Out of stock</h6>
-        <!--
         <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
         <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="TTYVT6UXB6528">
+        <input type="hidden" name="hosted_button_id" value="ZWQMY8XJ55DZQ">
         <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
         </form></h6>
-        -->
       </div>
 
       <div class="store-book-container">
