--- a/workshops/index.html
+++ b/workshops/index.html
@@ -61,6 +61,9 @@
 		    <p>Participants must attend the entire workshop.</p> 
 	       <p>To register for this event, please download a registration form as a <a href="../assets/docs/WW2017.docx">Word document</a>
 		       or a <a href="../assets/docs/WW2017.pdf">PDF</a> and send to Alex Dong.</p>
+		    <p>Location: <a href="../assets/docs/WestwaterExits.pdf">road exits</a> 
+			    and <a href="../assets/docs/WestwaterCamp.pdf">map</a>
+		    </p>
 	       
         <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
