--- a/workshops/index.html
+++ b/workshops/index.html
@@ -76,13 +76,14 @@
        		 <h3>Carmel Valley, California</h3>
        		 <p>July 29th and 30th 2017</p>
 				<p>Classes (locations to be announced)</p>
-				<p>29th July  9:30 - 12:00 Slow Set     2:00 - 4:30 Hao and Push Hands</p>
-				<p>30th July 9:30 - 12:00 Slow Set     2:00 - 4:30 Dong Family Fast form andPush Hands</p>
-				<p>Cost: $100 minimum for up to two classes, $40 per additional class.</p>
-				<p>Pre-registration with minimum $50 deposit required by 31st May</p>
-				<p>Checks, payable to Alex Dong, can be sent directly to Alex at:</p>
-				<p>PO Box 750962,Forest Hills NY 11375 or via ACH to Routing # 021000021 a/c 766727796</p>
-				<p>or to Andrew Allison at: 25420 Via Cicindela, Carmel, CA 93923-8412 </p>
+				<p>29th July  9:30 - 12:00 Slow Set     2:00 - 4:30 Hao and Push Hands<br/>
+				30th July 9:30 - 12:00 Slow Set     2:00 - 4:30 Dong Family Fast form andPush Hands</p>
+				<p>Cost: $100 minimum for up to two classes, $40 per additional class.<br/>
+				Pre-registration with minimum $50 deposit required by 31st May</p>
+				<p>Checks, payable to Alex Dong, can be sent directly to Alex at:<br/>
+				PO Box 750962,Forest Hills NY 11375 <br/> 
+					or via ACH to Routing # 021000021 a/c 766727796<br/>
+					or to Andrew Allison at: 25420 Via Cicindela, Carmel, CA 93923-8412 </p>
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
 	    
