--- a/workshops/index.html
+++ b/workshops/index.html
@@ -76,8 +76,8 @@
        		 <h3>Carmel Valley, California</h3>
        		 <p>July 29th and 30th 2017</p>
 				<p>Classes (locations to be announced)</p>
-				<p>29th July  9:30 - 12:00 Slow Set     2:00 - 4:30 Hao and Push Hands<br/>
-				30th July 9:30 - 12:00 Slow Set     2:00 - 4:30 Dong Family Fast form andPush Hands</p>
+				<p>29th July  9:30 - 12:00 Slow Set  <br/>   2:00 - 4:30 Hao and Push Hands<br/>
+				30th July 9:30 - 12:00 Slow Set    <br/>  2:00 - 4:30 Dong Family Fast form and Push Hands</p>
 				<p>Cost: $100 minimum for up to two classes, $40 per additional class.<br/>
 				Pre-registration with minimum $50 deposit required by 31st May</p>
 				<p>Checks, payable to Alex Dong, can be sent directly to Alex at:<br/>
