--- a/workshops/index.html
+++ b/workshops/index.html
@@ -64,7 +64,11 @@
             		<div id="upstate2017" style="display:none" class="image-popup" class="book-details-popup">
        		 <h3>Push Hands, Upstate New York</h3>
        		 <p>June 30th to July 3rd 2017</p>
-				<p>Details to follow</p>
+				<p></p>
+				<p>To register for this event, please download a registration form as a <a href="../assets/docs/NYPH2017.docx">Word document</a>
+or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
+				
+				
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
 	  
