--- a/workshops/index.html
+++ b/workshops/index.html
@@ -64,7 +64,11 @@
             		<div id="upstate2017" style="display:none" class="image-popup" class="book-details-popup">
        		 <h3>Push Hands, Upstate New York</h3>
        		 <p>June 30th to July 3rd 2017</p>
-				<p></p>
+				<p>Lifebridge Sanctuary, Rosendale New York<br/>
+				Cost for the four day camp, $620, includes nine classes, with
+					full board from Friday dinner to Monday breakfast.</p>
+				<p>Classes will include a mixture of circles, drills, energy
+				and structure work, as well as free Push Hands.</p>
 				<p>To register for this event, please download a registration form as a <a href="../assets/docs/NYPH2017.docx">Word document</a>
 or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
 				
