--- a/workshops/index.html
+++ b/workshops/index.html
@@ -119,6 +119,10 @@ or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
 		<a href="../assets/docs/France_2017_FR.docx">French</a> or 
 		<a href="../assets/docs/France_2017_EN.docx">English</a></p>
 		    <p>See also <a href="../assets/docs/Europe2017.docx">Europe 2017 details</a></p>
+		    <p><a target="_blank" href="../assets/docs/Registration France and Croatia Workshop2.docx">Registration Form</a>
+			</p>
+
+
 	</div>
 
 	<a href="#croatia2017" class="animated_popup"><h1>Croatia</h1></a>
@@ -131,7 +135,10 @@ or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
 					long break in between classes for lunch, nap or swim.
 					End of workshop at 4:30 pm on September 10th.</p>
 					
-				<p> <a href="../assets/docs/Europe2017.docx">Europe 2017 details</a></p>
+			<p> <a href="../assets/docs/Europe2017.docx">Europe 2017 details</a></p>
+			<p><a target="_blank" href="../assets/docs/Registration France and Croatia Workshop2.docx">Registration Form</a>
+			</p>
+
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
 	    
