--- a/workshops/index.html
+++ b/workshops/index.html
@@ -83,9 +83,16 @@ or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
             		<div id="carmel2017" style="display:none" class="image-popup" class="book-details-popup">
        		 <h3>Carmel Valley, California</h3>
        		 <p>July 29th and 30th 2017</p>
-				<p>Classes (locations to be announced)</p>
-				<p>29th July  9:30 - 12:00 Slow Set  <br/> 29th July  2:00 - 4:30 Hao and Push Hands<br/>
-				30th July 9:30 - 12:00 Slow Set    <br/> 30th July 2:00 - 4:30 Dong Family Fast form and Push Hands</p>
+				
+				<p>29th July  9:30 - 12:00 Slow Set  <br/> 
+					29th July  2:00 - 4:30 Hao and Push Hands<br/>
+					St. Phillip's Lutheran Church, 8065 Carmel Valley Road, Carmel, CA 93923
+					(4.3 miles East of Hwy 1) <br/> 
+					30th July 9:30 - 12:00 Slow Set    <br/> 
+					30th July 2:00 - 4:30 Dong Family Fast form and Push Hands<br/>
+					Carmel Foundation, Lincoln St. between 8th and 9th, Carmel-by-the-Sea, CA 93921
+
+				</p>
 				<p>Cost: $100 minimum for up to two classes, $40 per additional class.<br/>
 				Pre-registration with minimum $50 deposit required by 31st May</p>
 				<p>Checks, payable to Alex Dong, can be sent directly to Alex at:<br/>
