--- a/workshops/index.html
+++ b/workshops/index.html
@@ -87,7 +87,7 @@ or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
 				<p>29th July  9:30 - 12:00 Slow Set  <br/> 
 					29th July  2:00 - 4:30 Hao and Push Hands<br/>
 					St. Phillip's Lutheran Church, 8065 Carmel Valley Road, Carmel, CA 93923
-					(4.3 miles East of Hwy 1) <br/> 
+					(4.3 miles East of Hwy 1) </p><p>
 					30th July 9:30 - 12:00 Slow Set    <br/> 
 					30th July 2:00 - 4:30 Dong Family Fast form and Push Hands<br/>
 					Carmel Foundation, Lincoln St. between 8th and 9th, Carmel-by-the-Sea, CA 93921
