--- a/store/index.html
+++ b/store/index.html
@@ -34,7 +34,60 @@
   <section class="history-classes store-section books-section">
 
     <div class="store-book-container">
-      <h3><span class="red-highlight">NEW!</span>Red Book (English) Revised</h3>
+      <h3><span class="red-highlight">NEW!</span> Simplified Tai Chi & The Fundamental Qigong</h3>
+      <h4>$75.00</h4>
+      <a href="#simplifiedqigong-popup" class="animated_popup"><img src="../assets/images/simplifiedfundamental.jpg" height="250px"></a>
+      <h5><a href="#simplifiedqigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
+      <div id="simplifiedqigong-popup" style="display:none">
+        <p><img src="../assets/images/simplifiedtaichidvd.jpg"></a></p>
+        <h3>Simplified Tai Chi</h3>
+        <p>The simplified Slow Form is a much shorter form that takes only 8-12 minutes to do. It's created for those who can't or doesn't have the time to learn the long form. This form could be taught to new students in just 12 60-90 minutes classes or just 3-4 classes to experienced students.</p>
+        <p></p>
+        <p><img src="../assets/images/taichifundamental.jpg"></a></p>
+        <h3>The Fundamental Qigong</h3>
+        <p>Fundamental Qigong #3 focuses on keeping the lower body stable and relaxed while moving the upper body dynamically. The upper body rises, the lower body drops and connects with the ground. The upper body turns and spirals while the lower body remains sunk and rooted. The top and bottom do different things and yet they work together to create the ultimate balance stability and movement.</p>
+      </div>
+      <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="UL5YP447WKW56">
+      <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+      </form></h6>
+    </div>
+
+    <div class="store-book-container">
+      <h3><span class="red-highlight">NEW!</span> Simplified Tai Chi</h3>
+      <h4>$40.00</h4>
+      <a href="#simplifiedtaichi-popup" class="animated_popup"><img src="../assets/images/simplifiedtaichidvd.jpg"></a>
+      <h5><a href="#simplifiedtaichi-popup" class="animated_popup book-details-link">DVD Details</a></h5>
+      <div id="simplifiedtaichi-popup" style="display:none">
+        <h3>Simplified Tai Chi</h3>
+        <p>The simplified Slow Form is a much shorter form that takes only 8-12 minutes to do. It's created for those who can't or doesn't have the time to learn the long form. This form could be taught to new students in just 12 60-90 minutes classes or just 3-4 classes to experienced students.</p>
+      </div>
+      <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="U2J8R6GJQLDXQ">
+      <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+      </form></h6>
+    </div>
+
+    <div class="store-book-container">
+      <h3><span class="red-highlight">NEW!</span> The Fundamental Qigong</h3>
+      <h4>$35.00</h4>
+      <a href="#qigong-popup" class="animated_popup"><img src="../assets/images/taichifundamental.jpg"></a>
+      <h5><a href="#qigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
+      <div id="qigong-popup" style="display:none">
+        <h3>The Fundamental Qigong</h3>
+        <p>Fundamental Qigong #3 focuses on keeping the lower body stable and relaxed while moving the upper body dynamically. The upper body rises, the lower body drops and connects with the ground. The upper body turns and spirals while the lower body remains sunk and rooted. The top and bottom do different things and yet they work together to create the ultimate balance stability and movement.</p>
+      </div>
+      <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="K2W2H4T85LQ4L">
+      <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+      </form></h6>
+    </div>
+
+    <div class="store-book-container">
+      <h3><span class="red-highlight">NEW!</span> Red Book (English) Revised</h3>
       <h4>$45.00</h4>
       <a href="#redbookenglish-popup" class="animated_popup"><img src="../assets/images/englishbook.png"></a>
       <h5><a href="#redbookenglish-popup" class="animated_popup book-details-link">Book Details</a></h5>
@@ -111,7 +164,7 @@
       </div>
 
       <div class="store-book-container">
-        <h3><span class="red-highlight">NEW!</span>Red Book (English) Revised</h3>
+        <h3><span class="red-highlight">NEW!</span> Red Book (English) Revised</h3>
         <h4>$45.00</h4>
         <a href="#redbookenglish-popup" class="animated_popup"><img src="../assets/images/englishbook.png"></a>
         <h5><a href="#redbookenglish-popup" class="animated_popup book-details-link">Book Details</a></h5>
@@ -168,7 +221,39 @@
       <h1>DVDs</h1>
 
       <div class="store-book-container">
-        <h3><span class="red-highlight">NEW!</span> Taichi Fundamentals Qigong</h3>
+        <h3><span class="red-highlight">NEW!</span> Simplified Tai Chi</h3>
+        <h4>$40.00</h4>
+        <a href="#simplifiedtaichi-popup" class="animated_popup"><img src="../assets/images/simplifiedtaichidvd.jpg"></a>
+        <h5><a href="#simplifiedtaichi-popup" class="animated_popup book-details-link">DVD Details</a></h5>
+        <div id="simpliefiedtaichi-popup" style="display:none">
+          <h3>Simplified Tai Chi</h3>
+          <p>The simplified Slow Form is a much shorter form that takes only 8-12 minutes to do. It's created for those who can't or doesn't have the time to learn the long form. This form could be taught to new students in just 12 60-90 minutes classes or just 3-4 classes to experienced students.</p>
+        </div>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="U2J8R6GJQLDXQ">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
+      </div>
+
+      <div class="store-book-container">
+        <h3><span class="red-highlight">NEW!</span> The Fundamental Qigong</h3>
+        <h4>$35.00</h4>
+        <a href="#qigong-popup" class="animated_popup"><img src="../assets/images/taichifundamental.jpg"></a>
+        <h5><a href="#qigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
+        <div id="qigong-popup" style="display:none">
+          <h3>The Fundamental Qigong</h3>
+          <p>Fundamental Qigong #3 focuses on keeping the lower body stable and relaxed while moving the upper body dynamically. The upper body rises, the lower body drops and connects with the ground. The upper body turns and spirals while the lower body remains sunk and rooted. The top and bottom do different things and yet they work together to create the ultimate balance stability and movement.</p>
+        </div>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="K2W2H4T85LQ4L">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
+      </div>
+
+      <div class="store-book-container">
+        <h3>Taichi Fundamentals Qigong</h3>
         <h4>$45.00</h4>
         <a href="#taichiqigong-popup" class="animated_popup"><img src="../assets/images/qigong.jpg"></a>
         <h5><a href="#taichiqigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
@@ -194,7 +279,7 @@
       </div>
 
       <div class="store-book-container">
-        <h3><span class="red-highlight">NEW!</span> Taichi Fundamentals Qigong (3 Copies)</h3>
+        <h3>Taichi Fundamentals Qigong (3 Copies)</h3>
         <h4>$110.00 ($25 Off!)</h4>
         <a href="#taichiqigong-popup" class="animated_popup"><img src="../assets/images/qigong.jpg"></a>
         <h5><a href="#taichiqigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
